# curriculum_1_shota-saito

./: .gitignore  README.md
.github/workflows/: main_finalbackend1.yml  os-check.yml
.github/workflows/workflows/: js-test.yml
backend/: .env  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
ci-task/: grade.js  grade.test.js  package-lock.json  package.json
docker-mysql-task/: .env  Dockerfile  docker-compose.yaml
docker-mysql-task/init/: init.sql
frontend/src/: App.css  App.tsx
html/: index.html  style.css  styles.css
js/: 03.js
js2/: 04.js
js4/: 06.html  06.js
my-app-supabase/: package-lock.json  package.json
my-app-supabase/src/: App.jsx  supabaseClient.js
my-chatbot/: package-lock.json  package.json
my-chatbot/src/: App.tsx
oscommand/: os_C.txt
react/my-app/src/: App.js  MemoForm.js
