[tool.poetry]
name = "api"
version = "0.1.0"
description = "FastAPI with OpenAI integration"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
psycopg = {version = "^3.1.0", extras = ["binary"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"